--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ pandas = "^1.3.5"
 jupyter = "^1.0.0"
 ipykernel = "^6.6.1"
 lxml = "^4.7.1"
+plotly = "^5.5.0"
+streamlit = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -20,3 +22,7 @@ black = "^21.12b0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 119
+
