--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,17 @@ description = ""
 authors = ["yash <yaswanthbangaru13@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9,<3.11"
 pandas = "^1.3.5"
 jupyter = "^1.0.0"
 ipykernel = "^6.6.1"
 lxml = "^4.7.1"
 plotly = "^5.5.0"
 streamlit = "^1.3.1"
+prophet = "^1.0.1"
+scipy = "^1.8.0"
+seaborn = "^0.11.2"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
