--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ prophet = "^1.0.1"
 scipy = "^1.8.0"
 seaborn = "^0.11.2"
 sklearn = "^0.0"
+pystan = "2.19.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
